Fix wrapping bug in module names on package page

--- a/datafiles/static/hackage.css
+++ b/datafiles/static/hackage.css
@@ -837,15 +837,7 @@ ul.links li form button {
   list-style: none;
   margin: 0 0 0 20px;
 
-     /* Warning: Needed for oldIE support, but words are broken up letter-by-letter */
-    -ms-word-break: break-all;
-    word-break: break-all;
-    /* Non standard for webkit */
-    word-break: break-word;
-    -webkit-hyphens: auto;
-    -moz-hyphens: auto;
-    -ms-hyphens: auto;
-    hyphens: auto;
+  overflow-wrap: break-word;
 }
 
 /* Disable identation for the top level modules */
